# oxcaml

./: .gitignore  .ocamlformat  Makefile  README.md  async.opam.locked  async_extra.opam.locked  async_js.opam.locked  async_kernel.opam.locked  async_rpc_kernel.opam.locked  async_rpc_websocket.opam.locked  base.opam.locked  bonsai.opam.locked  bonsai_web.opam.locked  cloudbuild.yaml  cloudbuild2.yaml  cohttp-async.opam.locked  core.opam.locked  core_kernel.opam.locked  core_unix.opam.locked  dune-project  game.ml  hw1.mli  hw2_tictactoe_logic.ml  hw3_tictactoe_logic_test.ml  hw3_tictactoe_logic_test.mli  hw4_alpha_beta_search.ml  hw4_alpha_beta_search.mli  hw4_alpha_beta_search_test.mli  hw5_static_state.html  index.html  jbuild  js_of_ocaml-ppx.opam.locked  js_of_ocaml.opam.locked  merlin.opam.locked  ocaml-embed-file.opam.locked  ocaml-lsp-server.opam.locked  ocamlformat.opam.locked  parallel.opam.locked  ppx_jane.opam.locked  rummikub.opam  (+16 more)
.devcontainer/: Dockerfile  devcontainer.json
example/: dune  dune-project
example/bonsai/: dune
hw5_html_css/: hw5_static_state.css
logic/: dune  hw1.ml  hw2_tictactoe_logic.ml  hw2_tictactoe_logic.mli  hw4_alpha_beta_search.ml  tictactoe_logic_library.ml
src/: dune  meld.ml  meld.mli  rules.ml  rules.mli  rummikub.ml  state.ml  state.mli  tile.ml  tile.mli
test/: ai_competition.ml  dune  expect_state.ml  hw3_tictactoe_logic_test.ml  hw4_alpha_beta_search_test.ml  qcheck_tests.ml  random_tests.ml  rules_tests.ml  rummikub_state_tests.ml
ui/: dune  rummikub_app.ml  rummikub_ui.ml  rummikub_ui_simple.ml  tictactoe_ui.ml
(+2 files in other folders)
